# rasterlab

./: .gitignore  CLAUDE.md  Cargo.toml  GPU_PIPELINE_PLAN.md  GPU_WORK_REMAINING.md  README.md  REFACTOR.md  REVISED_GPU.md  TODO.md
.claude/skills/grill-me/: SKILL.md
.github/workflows/: release.yml
doc/: FEATURES.md  FUTURE_REFACTOR.md  RELEASE.md
luts/: bleach_bypass.cube  identity.cube  teal_orange.cube  warm_vintage.cube
plugins/example-plugin/: Cargo.toml
plugins/example-plugin/src/: lib.rs
rasterlab-cli/: Cargo.toml
rasterlab-cli/src/: main.rs  pipeline_builder.rs
rasterlab-cli/src/commands/: batch.rs  info.rs  mod.rs  process.rs
rasterlab-core/: Cargo.toml
rasterlab-core/benches/: operations.rs
rasterlab-core/examples/: focus_stack_test.rs  gen_showcase_rlab.rs  gen_test_images.rs  hdr_synthetic.rs  noise_reduction_test.rs  pano_test.rs  rayon_scaling.rs  release_test_artifacts.rs  render_showcase.rs  render_timing.rs  rlab_verify.rs  smart_enhance.rs
rasterlab-core/src/: analysis.rs  cancel.rs  error.rs  image.rs  lib.rs  library_meta.rs  pipeline.rs  project.rs  render_cache.rs
rasterlab-core/src/formats/: exif_util.rs  jpeg.rs  mod.rs  nef.rs  png.rs  raw.rs
rasterlab-core/src/ops/: blur.rs  brightness_contrast.rs  bw.rs  channel_levels.rs  clarity_texture.rs  color_balance.rs  color_space.rs  crop.rs  curves.rs  deconvolve.rs  denoise.rs  faux_hdr.rs  flip.rs  focus_stack.rs  grain.rs  hdr_merge.rs  heal.rs  highlights_shadows.rs  histogram.rs  hsl.rs  hsl_panel.rs  hue_shift.rs  levels.rs  lut.rs  mask.rs  mod.rs  noise_reduction.rs  panorama.rs  perspective.rs  resize.rs  rotate.rs  saturation.rs  sepia.rs  shadow_exposure.rs  sharpen.rs  split_tone.rs  vibrance.rs  vignette.rs  white_balance.rs
rasterlab-core/src/plugin_loader/: loader.rs  mod.rs  registry.rs
rasterlab-core/src/traits/: format_handler.rs  mod.rs  operation.rs  plugin.rs
rasterlab-core/tests/: golden.rs  hdr_merge_test_images.rs  project_ecc.rs  row_parallel_granularity.rs
rasterlab-gpu/: Cargo.toml
rasterlab-gpu/src/: common.rs  context.rs  error.rs  image.rs  kernels.rs  lib.rs  ops.rs  pipeline.rs  shaders.rs  tests.rs
rasterlab-gui/: Cargo.toml  build.rs
rasterlab-gui/src/: app.rs  autosave.rs  file_chooser.rs  main.rs  prefs.rs
rasterlab-gui/src/panels/: canvas.rs  edit_stack.rs  export_dialog.rs  histogram_panel.rs  library_detail.rs  library_panel.rs  mod.rs  tools.rs
rasterlab-gui/src/panels/tools/: auto_enhance.rs  blur.rs  brightness_contrast.rs  bw.rs  clarity_texture.rs  color_balance.rs  color_space.rs  crop.rs  curves.rs  deconvolve.rs  denoise.rs  export.rs  faux_hdr.rs  focus_stack.rs  grain.rs  hdr_merge.rs  heal.rs  highlights_shadows.rs  hsl.rs  hue_shift.rs  levels.rs  looks.rs  lut.rs  masking.rs  metadata.rs  mod.rs  noise_reduction.rs  panorama.rs  perspective.rs  resize.rs  rotate.rs  saturation.rs  sepia.rs  shadow_exposure.rs  shared.rs  sharpen.rs  split_tone.rs  straighten.rs  tool_trait.rs  vibrance.rs  (+2 more)
rasterlab-gui/src/state/: app_state.rs  edit_session.rs  library_state.rs  mod.rs  tool_state.rs  virtual_copies.rs
rasterlab-library/: Cargo.toml
rasterlab-library/src/: db_trait.rs  fs_lock.rs  import.rs  lib.rs  library.rs  reconstruct.rs  scrub.rs  search.rs  stoolap_db.rs  thumbnail.rs
rasterlab-library/tests/: library_integration.rs  scrub_integration.rs
rasterlab-plugin-api/: Cargo.toml
rasterlab-plugin-api/src/: lib.rs  types.rs  vtable.rs
rasterlab-render/: Cargo.toml
rasterlab-render/src/: lib.rs
release_artifacts/: all_tools_release_test.rlab  all_tools_stack.json
test_images/: showcase.rlab
