[workspace]
resolver = "2"
members = [
    "rasterlab-plugin-api",
    "rasterlab-core",
    "rasterlab-cli",
    "rasterlab-gui",
    "plugins/example-plugin",
]

[workspace.package]
version   = "0.1.0"
edition   = "2024"
license   = "MIT OR Apache-2.0"
authors   = ["RasterLab Contributors"]

[workspace.dependencies]
# Serialization
serde           = { version = "1",    features = ["derive"] }
serde_json      = "1"

# Error handling
thiserror       = "2"
anyhow          = "1"

# Parallelism
rayon           = "1"

# Polymorphic serde for trait objects
typetag         = "0.2"

# Image codecs
image           = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
rawler          = "0.7"

# Plugin dynamic loading
libloading      = "0.8"

# CLI
clap            = { version = "4", features = ["derive"] }

# GUI
eframe          = "0.29"
egui            = "0.29"
rfd             = "0.15"

# Internal crates
rasterlab-plugin-api = { path = "rasterlab-plugin-api" }
rasterlab-core       = { path = "rasterlab-core" }
