[profile.dev]
opt-level = 1                   # eliminates most bounds-check overhead in hot pixel loops

[profile.release]
opt-level = 3        # default, keep it
lto = "thin"         # link-time optimization across crates (thin is fast, "fat" is slower but more aggressive)
codegen-units = 1    # single CGU = more optimization opportunities, slower compile
debug = 1            # keep for samply profiling; drop to false for distribution builds
strip = "debuginfo"  # remove debug info from final binary (drop this if using debug = 1)

#For distribution (ship to other Macs):
# Universal binary target — runs on both Intel and Apple Silicon
# Build with:
# cargo build --release --target aarch64-apple-darwin
# cargo build --release --target x86_64-apple-darwin
# lipo -create -output rasterlab-gui target/aarch64-apple-darwin/release/rasterlab-gui \
# target/x86_64-apple-darwin/release/rasterlab-gui

[profile.dev.package."*"]
opt-level = 3                   # fully optimise deps (rayon, codecs, etc.) even in dev builds

[workspace]
resolver = "2"
members = [
    "rasterlab-plugin-api",
    "rasterlab-core",
    "rasterlab-library",
    "rasterlab-cli",
    "rasterlab-gui",
    "plugins/example-plugin",
]

[workspace.package]
version   = "0.2.1"
edition   = "2024"
license   = "MIT OR Apache-2.0"
authors   = ["RasterLab Contributors, mainly Claude right now..,"]

[workspace.dependencies]
# Serialization
serde           = { version = "1",    features = ["derive"] }
serde_json      = "1"

# Error handling
thiserror       = "2"
anyhow          = "1"

# Parallelism
rayon           = "1"

# Polymorphic serde for trait objects
typetag         = "0.2"

# Image codecs
image           = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
rawler          = "0.7"

# EXIF / metadata
kamadak-exif    = "0.6"       # pure-Rust EXIF parser for JPEG/TIFF/RAW
img-parts       = "0.3"       # JPEG/PNG segment manipulation for metadata-preserving export

# Plugin dynamic loading
libloading      = "0.8"

# CLI
clap            = { version = "4", features = ["derive"] }

# GUI
eframe          = "0.34"
egui            = "0.34"
egui-file-dialog = "0.13"
rfd             = "0.15"

# Hashing
blake3 = "1"

# Internal crates
rasterlab-plugin-api = { path = "rasterlab-plugin-api" }
rasterlab-core       = { path = "rasterlab-core" }
rasterlab-library    = { path = "rasterlab-library" }
