[package]
name        = "rasterlab-core"
description = "Core image processing engine for RasterLab"
version.workspace   = true
edition.workspace   = true
license.workspace   = true

[dependencies]
rasterlab-plugin-api = { workspace = true }

serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
blake3       = { workspace = true }
rayon        = { workspace = true }
typetag      = { workspace = true }
image        = { workspace = true }
libloading   = { workspace = true }

# NEF/RAW camera file decoding (Nikon, Canon, Sony, etc.)
# Feature-gated so the crate compiles without rawler if unavailable.
rawler       = { workspace = true, optional = true }

[features]
default = ["nef"]
nef     = ["dep:rawler"]

[dev-dependencies]
# For integration tests and benchmarks
criterion    = { version = "0.5", features = ["html_reports"] }

[[bench]]
name    = "operations"
harness = false
