[package]
name        = "rasterlab-core"
description = "Core image processing engine for RasterLab"
version.workspace   = true
edition.workspace   = true
license.workspace   = true

[dependencies]
rasterlab-plugin-api = { workspace = true }

serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
blake3       = { workspace = true }
rayon        = { workspace = true }
typetag      = { workspace = true }
image        = { workspace = true }
libloading   = { workspace = true }
tempfile                = "3"
reed-solomon-erasure    = "6"

# Camera RAW decoding (Nikon, Canon, Sony, Fujifilm, etc.)
# Feature-gated so the crate compiles without rawler if unavailable.
rawler       = { workspace = true, optional = true }

# EXIF / metadata
kamadak-exif = { workspace = true }
img-parts    = { workspace = true }

[features]
default = ["raw"]
raw     = ["dep:rawler"]
nef     = ["raw"]   # backward-compat alias

[dev-dependencies]
# For integration tests and benchmarks
criterion    = { version = "0.5", features = ["html_reports"] }

[[bench]]
name    = "operations"
harness = false

[[example]]
name = "rlab_verify"
