[package]
name        = "rasterlab-gpu"
description = "GPU operation kernels for RasterLab"
version.workspace   = true
edition.workspace   = true
license.workspace   = true

[dependencies]
rasterlab-core = { workspace = true }
wgpu           = { workspace = true }
bytemuck       = { workspace = true }
thiserror      = { workspace = true }

[dev-dependencies]
pollster       = "0.4"
