[package]
name        = "rasterlab-gui"
description = "Cross-platform GUI for RasterLab (egui/eframe)"
version.workspace   = true
edition.workspace   = true
license.workspace   = true

[[bin]]
name = "rasterlab-gui"
path = "src/main.rs"

[dependencies]
rasterlab-core    = { workspace = true }
rasterlab-library = { workspace = true }

eframe       = { workspace = true }
egui         = { workspace = true }
image        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
serde_yaml   = "0.9"
anyhow       = { workspace = true }
rayon        = { workspace = true }
dirs         = "5"

# Native file dialogs (open/save)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd              = { workspace = true }
egui-file-dialog = { workspace = true }
