[package]
name        = "rasterlab-render"
description = "Headless render thread and pipeline execution for RasterLab"
version.workspace   = true
edition.workspace   = true
license.workspace   = true

[dependencies]
rasterlab-core = { workspace = true }
rayon          = { workspace = true }
rasterlab-gpu  = { workspace = true, optional = true }

[features]
default = []
gpu = ["dep:rasterlab-gpu"]

[dev-dependencies]
pollster = "0.4"
wgpu = { workspace = true }
