[package]
name        = "example-plugin"
description = "Example RasterLab plugin: Sepia tone filter"
version.workspace   = true
edition.workspace   = true
license.workspace   = true

# cdylib produces a .so/.dylib/.dll loadable by rasterlab-core's plugin loader
[lib]
name      = "example_plugin"
crate-type = ["cdylib"]

[dependencies]
rasterlab-plugin-api = { workspace = true }
